# recipe-tools

./: .gitignore  Cargo.toml  README.md
backfill-composerid/: Cargo.toml
backfill-composerid/src/: main.rs  update.rs
download-ndjson/: Cargo.toml
download-ndjson/src/: main.rs
find-empty-contributors/: Cargo.toml
find-empty-contributors/src/: main.rs
recipes-lib/: Cargo.toml
recipes-scripts/: check-images.sh  lookup-composer.sh  salt-and-pepper.sh  transform-recipes.sh
recipes-scripts/transforms/: 00-add-composer-id.sh  01-commas-and-whitespace.sh  02-salt-and-pepper.sh
recipes_lib/: Cargo.toml
recipes_lib/src/: capi_client.rs  lib.rs  recipe_model.rs
tempscripts/: checksum.lst
