[package]
name = "backfill-composerid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = "0.11.24"
reqwest_mock = "0.7.0"
tokio = { version = "1.36.0", features = ["full"] }
recipes_lib = { path = "../recipes_lib" }