[package]
name = "download-ndjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
recipes_lib = { path = "../recipes_lib" }
serde_json = "1.0.114"