[package]
name = "recipes_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
simple-error = "0.3.0"
tokio = { version = "1.36.0", features = ["tokio-macros"] }
json-structural-diff = "0.1.0"